add test scenario for ListAggregate